@@ -1,4 +1,11 @@
 
+                CHANGES IN party VERSION 0.9-9995 (2010-05-19)
+
+    o    assignment of observations based on surrogate splits
+         during fitting might have failed; observations went
+         with majority (in a sub-optimal way)
+
+
                 CHANGES IN party VERSION 0.9-9994 (2010-04-14)
 
     o    varimp() gives warning for non-unity weights
